--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -13,7 +13,7 @@ items:
       - name: Creación de una aplicación de Android
         href: quick-android-map.md
       - name: Creación de una aplicación iOS
-        href: quick-ios-app.md
+        href: quick-iOS-app.md
   - name: Tutoriales
     items:
       - name: Tutoriales de SDK web
@@ -338,7 +338,7 @@ items:
           - name: Render Service
             href: /rest/api/maps/render
           - name: Render Service v2
-            href: /rest/api/maps/render-v2
+            href: /rest/api/maps/renderv2
           - name: Route Service
             href: /rest/api/maps/route
           - name: Servicio de búsqueda
@@ -366,11 +366,11 @@ items:
               - name: Servicio WFS
                 href: /rest/api/maps/v2/wfs
           - name: Administración de cuentas de Maps
-            href: /rest/api/maps-management/
+            href: /rest/api/maps-management
       - name: JavaScript
         items:
           - name: Control de mapa
-            href: /javascript/api/azure-maps-control/
+            href: /javascript/api/azure-maps-javascript/
           - name: Diseño de herramientas
             href: /javascript/api/azure-maps-drawing-tools/
           - name: Módulo de servicio
@@ -396,7 +396,7 @@ items:
           - name: IoT Hub Device Provisioning Service
             href: ../iot-dps/index.yml
           - name: IoT Central
-            href: /azure/iot-central/
+            href: /microsoft-iot-central/
           - name: IoT Edge
             href: ../iot-edge/index.yml
           - name: IoT Plug and Play
@@ -414,7 +414,7 @@ items:
       - name: Condiciones de uso de Azure Maps
         href: 'https://azure.microsoft.com/support/legal/'
       - name: Precios de Azure Maps
-        href: 'https://azure.microsoft.com/pricing/details/azure-maps/'
+        href: 'https://azure.microsoft.com/pricing/details/azure-maps'
       - name: Calculadora de precios
         href: 'https://azure.microsoft.com/pricing/calculator/'
       - name: Vídeos de Azure Maps
@@ -426,9 +426,9 @@ items:
       - name: Glosario de Azure Maps
         href: glossary.md
       - name: Actualizaciones del servicio
-        href: 'https://azure.microsoft.com/updates/'
+        href: 'https://azure.microsoft.com/updates'
       - name: Centro para desarrolladores de Azure
-        href: 'https://azure.microsoft.com/overview/iot/'
+        href: 'https://azure.microsoft.com/develop/iot/'
       - name: Azure Roadmap
         href: 'https://azure.microsoft.com/roadmap/?category=iot'
       - name: Casos prácticos técnicos
