--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -115,6 +115,8 @@
           href: active-directory-architecture.md
         - name: "Integración de todas sus aplicaciones en Azure\_AD"
           href: five-steps-to-full-application-integration-with-azure-ad.md
+        - name: Opciones de identidad paralelas
+          href: azure-active-directory-parallel-identity-options.md
         - name: Administración de usuarios multiinquilino
           items:
             - name: Introducción a la administración de usuarios multiinquilino
