--- a/articles/azure-arc/data/toc.yml
+++ b/articles/azure-arc/data/toc.yml
@@ -15,6 +15,8 @@ items:
     items:
       - name: Planeamiento de una implementación de servicios de datos habilitados para Azure Arc
         href: plan-azure-arc-data-services.md
+      - name: Creación de un clúster de AKS
+        href: create-aks-cluster-data-controller.md
   - name: Conceptos
     items:
       - name: Modos de conectividad y requisitos
@@ -51,8 +53,6 @@ items:
                 href: create-data-controller-direct-prerequisites.md
               - name: Azure portal
                 href: create-data-controller-direct-azure-portal.md
-              - name: az CLI
-                href: create-data-controller-direct-cli.md
       - name: Experiencias comunes en los servicios de datos habilitados para Azure Arc
         items:
           - name: Supervisión con paneles (Azure Data Studio)
@@ -245,7 +245,5 @@ items:
             href: ./reference/reference-az-sql-midb-arc.md
   - name: Recursos
     items:
-      - name: Plan para implementar
-        href: plan-azure-arc-data-services.md
       - name: Azure Arc Jumpstart
         href: 'https://azurearcjumpstart.io'
