--- a/articles/frontdoor/standard-premium/TOC.yml
+++ b/articles/frontdoor/standard-premium/TOC.yml
@@ -5,7 +5,7 @@
     - name: ¿Qué es Azure Front Door Standard/Premium (versión preliminar)?
       href: overview.md
     - name: Elección del equilibrador de carga correcto
-      href: /architecture/guide/technology-choices/load-balancing-overview.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+      href: /azure/architecture/guide/technology-choices/load-balancing-overview?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
     - name: Comparación de niveles
       href: tier-comparison.md
 - name: Guías de inicio rápido
