--- a/articles/frontdoor/standard-premium/TOC.yml
+++ b/articles/frontdoor/standard-premium/TOC.yml
@@ -39,7 +39,7 @@
       href: ../front-door-health-probes.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
     - name: Dominio con comodín
       href: ../front-door-wildcard-domain.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
-    - name: Conjunto de reglas
+    - name: Motor de reglas
       items:
         - name: Arquitectura del motor de reglas
           href: concept-rule-set.md
